laporan_error.txt
=== PENYEBAB UTAMA MANIFEST MERGER GAGAL ===
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:desugarDebugFileDependencies
> Task :app:processDebugJavaRes NO-SOURCE
> Task :app:mergeDebugJavaResource
> Task :app:mergeDebugJniLibFolders
> Task :app:checkDebugDuplicateClasses
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:processDebugManifestForPackage
> Task :app:mergeLibDexDebug
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:processDebugResources
> Task :app:mergeExtDexDebug
> Task :app:validateSigningDebug

> Task :app:compileDebugJavaWithJavac
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/nova/agent/MainActivity.java:268: error: cannot find symbol
            if (service.getId().contains(ActionAssistantService.class.getSimpleName())) {
                                         ^
  symbol:   class ActionAssistantService
  location: class MainActivity
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/nova/agent/MainActivity.java:305: error: cannot find symbol
        new Handler().postDelayed(this::updateUIState, 400);
            ^
  symbol:   class Handler
  location: class MainActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
